--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.22.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.2",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "prisma": "^5.22.0"
   },
   "devDependencies": {
